tests/semantic/underscore3/underscore3.err
Warning: No rules/facts defined for relation In in file underscore3.dl at line 10
.decl In(x : number)
------^--------------
Error: Ungrounded record in file underscore3.dl at line 23
Out() :- !Record(*R[_,*R[1,nil]]).      // error
-----------------^-------------------------------
Error: Ungrounded record in file underscore3.dl at line 24
Out() :- !Record(*R[1,_]).              // error
-----------------^-------------------------------
Error: Underscore in head of rule in file underscore3.dl at line 27
Record(_) :- _ = nil.                   // error
^------------------------------------------------
Error: Underscore in binary relation in file underscore3.dl at line 27
Record(_) :- _ = nil.                   // error
-------------^-----------------------------------
4 errors generated, evaluation aborted
